# otter-api-wrapper-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
docs/: index.md
examples/: run_sample.py
src/otter_api_wrapper/: core.py  utils.py
